--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;300;400&family=Montserrat:ital,wght@0,100;0,200;0,400;1,100&display=swap"
-      rel="stylesheet"/>
-
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-
     <title>ejerciciocolores</title>
   </head>
-  <body>
-    <h1>Mirame cambiar de color</h1>
-  </body>
+    <body>
+      
+        <h1>Mirame cambiar el color!</h1>
+  
+     
+    </body>
 </html>
