--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <title>ejerciciocolores</title>
   </head>
     <body>
-      
-        <h1>Mirame cambiar el color!</h1>
+        <div class="container">
+          <h1>Mirame cambiar el color!</h1>
+        </div>
   
      
     </body>
